# acapy-cloud

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  .pylintrc  README.md  Tiltfile  docker-compose.yaml  manage  pyproject.toml
.github/: dependabot.bak  dependabot.yml
.github/actions/deploy-eks/: action.yml
.github/actions/test-eks/: action.yml
.github/workflows/: README.md  cicd.yml  codacy.yml  deploy-test-eks.yml  docker-build.yml  format.yml  local-tests.yml  mdbook-deploy.yml  notify.yml  scorecards.yml  sonarcloud.yml  unit.yml  update-openapi.yml  validate-pr.yml
.mise/tasks/kind/: create  destroy
app/: main.py  pyproject.toml
app/dependencies/: acapy_clients.py  auth.py  container.py  role.py
app/exceptions/: __init__.py  cloudapi_exception.py  handle_acapy_call.py  handle_model_with_validation.py  trust_registry_exception.py
app/models/: definitions.py  issuer.py  jsonld.py  jws.py  oob.py  revocation.py  sd_jws.py  tenants.py  verifier.py  wallet.py
app/routes/: connections.py  definitions.py  issuer.py  jsonld.py  messaging.py  oob.py  revocation.py  sse.py  trust_registry.py  verifier.py
app/routes/admin/: tenants.py
app/routes/wallet/: credentials.py  dids.py  jws.py  sd_jws.py
app/services/: acapy_ledger.py  acapy_wallet.py  revocation_registry.py
app/services/definitions/: credential_definition_publisher.py  credential_definitions.py  schema_publisher.py  schemas.py
app/services/event_handling/: sse.py
app/services/issuer/: acapy_issuer.py  acapy_issuer_v2.py
app/services/onboarding/: issuer.py  tenants.py  verifier.py
app/services/trust_registry/: actors.py  schemas.py
app/services/verifier/: acapy_verifier.py  acapy_verifier_v2.py
app/services/wallet/: wallet_credential.py
app/tests/: conftest.py  test_main.py  test_util_definitions.py  test_util_did.py  test_util_wallet_type_checks.py
app/tests/dependencies/: test_acapy_clients.py  test_auth.py  test_role.py
app/tests/e2e/: README.md  conftest.py  test_auth.py  test_connections.py  test_definitions.py  test_did_exchange.py  test_did_rotate.py  test_exception_handler.py  test_jsonld.py  test_messaging.py  test_oob.py  test_proof_request_models.py  test_revocation.py  test_sse.py  test_tenants.py  test_trust_registry.py  test_wallet_credentials.py  test_wallet_dids.py  test_wallet_jws.py  test_wallet_sd_jws.py
app/tests/exception_handling/: test_handle_acapy_call.py  test_handle_model_with_validation.py
app/tests/fixtures/: credentials.py  definitions.py  dids.py  member_acapy_clients.py  member_async_clients.py  member_connections.py  member_wallets.py
app/tests/models/: test_issuer.py  test_jsonld.py  test_jws.py  test_oob.py  test_tenants.py  test_verifier.py
app/tests/resilience_testing/: monitor_and_kill_pod.sh  resilience_test_utils.py  (+1 more)
app/util/: acapy_verifier_utils.py  assert_public_did.py  check_endorser_connection.py  credentials.py  definitions.py  did.py  extract_validation_error.py  retry_method.py  save_exchange_record.py  string.py  tenants.py  transaction_acked.py  valid_issuer.py  wallet_type_checks.py
dockerfiles/: README.md  poetry-requirements.txt
dockerfiles/agents/: Dockerfile  pyproject.toml
dockerfiles/app/: Dockerfile
dockerfiles/endorser/: Dockerfile
dockerfiles/revocation-service/: Dockerfile
dockerfiles/tails/: Dockerfile
dockerfiles/tests/: Dockerfile
dockerfiles/trustregistry/: Dockerfile
dockerfiles/waypoint/: Dockerfile
docs/: book.toml
docs/openapi/: tenant-admin-openapi.json  tenant-admin-openapi.yaml  tenant-openapi.json  tenant-openapi.yaml
docs/src/: Cheqd.md  Quick Start Guide.md  README.md
endorser/: main.py  pyproject.toml
endorser/services/: endorsement_processor.py  endorser_config.py
endorser/tests/: conftest.py  test_endorser_config.py  test_endorser_processor.py  test_main.py  test_util_endorsement.py  test_util_transaction_record.py
endorser/util/: endorsement.py  transaction_record.py  trust_registry.py
environments/governance-ga/: aca-py-agent.default.env  fastapi.default.env
environments/governance-multitenant/: aca-py-agent.default.env  fastapi.default.env
environments/governance-public/: fastapi.default.env
environments/governance-tenant/: fastapi.default.env
helm/: acapy-cloud.yaml.gotmpl
helm/acapy-cloud/: Chart.yaml  README.md  values.yaml
helm/acapy-test/: values.yaml
helm/cheqd/: Chart.yaml  values.yaml
helm/ledger-nodes/: values.yaml
helm/nats/: Chart.yaml  values.yaml
resources/: postman-prf.md
revocation_service/: __init__.py  main.py
revocation_service/routers/: __init__.py
revocation_service/services/: __init__.py  rev_reg_manager.py
scripts/: download_openapi_specs.sh  summary.py
scripts/k6/: Dockerfile  README.md  compose.metrics.yaml  compose.yaml  env.sh  run_tests.sh
shared/: __init__.py  constants.py  log_config.py
shared/exceptions/: __init__.py  cloudapi_value_error.py
shared/models/: connection_record.py  credential_exchange.py  endorsement.py  presentation_exchange.py  protocol.py  trustregistry.py
shared/services/: nats_jetstream.py  nats_jetstream_publish.py
shared/tests/: test_resolve_cheqd_resources.py  test_rich_async_client.py
shared/util/: api_router.py  mock_agent_controller.py  resolve_cheqd_resources.py  rich_async_client.py  rich_parsing.py
tails/: main.py
tails/routers/: tails.py
tails/tests/: conftest.py  test_get_file_by_hash.py  test_main.py  test_put_file_by_hash.py
tilt/: README.md
tilt/acapy-cloud/: Tiltfile  pgadmin.yaml  postgres.yaml
tilt/ingress_nginx/: values.yaml
tilt/metrics/: Tiltfile
trustregistry/: alembic.ini  crud.py  database.py  db.py  list_type.py  main.py  pyproject.toml
trustregistry/registry/: registry_actors.py  registry_schemas.py
trustregistry/tests/: test_crud.py  test_db.py  test_list_type.py  test_main.py  test_models.py  test_registry_actors.py  test_registry_schema.py
waypoint/: main.py  pyproject.toml
waypoint/routers/: sse.py
waypoint/services/: nats_service.py
waypoint/tests/: test_main.py
(+263 files in other folders)
