[project]
name = "acapy-cloud"
version = "5.0.0-rc4"
description = "Main project configuration for acapy-cloud"
authors = [
  { name = "Mourits de Beer", email = "mourits.debeer@didx.co.za" },
  { name = "Cloete du Preez", email = "cloete.dupreez@didx.co.za" },
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.8"

base58 = "~2.1.1"
fastapi = "~0.115.10"
httpx = "~0.28.0"
loguru = "~0.7.2"
orjson = "~3.10.7"
pydantic = "~2.11.1"
PyYAML = "~6.0.2"
scalar-fastapi = "^1.0.3"
uvicorn = "~0.34.2"
uvloop = "^0.21.0"

[tool.poetry.group.app.dependencies]
aiohttp = "~3.12.0"
aiocache = "~0.12.0"
aries-cloudcontroller = "==1.3.0.post20250526"
pyjwt = "~2.10.0"
uuid_utils = "^0.11.0"

[tool.poetry.group.endorser.dependencies]
aries-cloudcontroller = "==1.3.0.post20250526"
dependency-injector = "~4.46.0"
nats-py = { git = "https://github.com/ff137/nats.py", tag = "v2.10.0-w-orjson", extras = ["nkeys", "orjson", "uuid_utils"] }
tenacity = "^9.1.0"

[tool.poetry.group.trust-registry.dependencies]
alembic = "~1.16.0"
psycopg2-binary = "~2.9.6"
sqlalchemy = "~2.0.40"

[tool.poetry.group.tails.dependencies]
boto3 = "~1.38.24"
python-multipart = "~0.0.20"

[tool.poetry.group.waypoint.dependencies]
aiohttp = "~3.12.0"
dependency-injector = "~4.46.0"
nats-py = { git = "https://github.com/ff137/nats.py", tag = "v2.10.0-w-orjson", extras = ["nkeys", "orjson", "uuid_utils"] }
sse-starlette = "~2.3.3"
tenacity = "^9.1.0"
uuid_utils = "^0.11.0"

[tool.poetry.group.dev.dependencies]
anyio = "~4.9.0"
pre-commit = "~4.2.0"
pytest = "~8.4.0"
pytest-cov = "~6.1.0"
pytest-mock = "~3.14.0"
pytest-xdist = "^3.6.1"
ruff = "~0.11.12"

[tool.coverage.run]
omit = ["*/tests/*", "*/.venv/*", "*/site-packages/*"]

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term:skip-covered"
junit_family = "xunit2"

[tool.ruff]
lint.select = ["B006", "C", "D", "E", "F"]
lint.ignore = [
  "C901", # Fix eventually
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D203",
  "D204",
  "D205", # 1 blank line required between summary line and description
  "D212", # Multi-line docstring summary should start at the first line
  "D213",
  "D215",
  "D415", # Docstring: First line should end with a period, question mark, or exclamation point
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "D417", # Detects missing argument descriptions - false positives in route methods
  "E501",
]
line-length = 88
exclude = [".git/*", "endorser/*"]

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"
