[tool.poetry]
name = "acapy-cloud-endorser"
version = "5.0.0rc0"
description = "Endorser submodule for acapy-cloud"
authors = [
  "Mourits de Beer <mourits.debeer@didx.co.za>",
  "Cloete du Preez <cloete.dupreez@didx.co.za>",
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.8"

aries-cloudcontroller = "==1.2.1.post20250327"
# aries-cloudcontroller = { git = "https://github.com/didx-xyz/aries-cloudcontroller-python.git", rev = "release-1.2.1-20250327" }
dependency-injector = "^4.46.0"
fastapi = "~0.115.10"
httpx = "~0.28.0"
loguru = "~0.7.2"
nats-py = { extras = ["nkeys"], version = "^2.10.0" }
orjson = "~3.10.7"
pydantic = "~2.11.1"
scalar-fastapi = "^1.0.3"
six = "^1.17.0"                                      # Just to force using same version as app
tenacity = "^9.0.0"
uvicorn = "~0.34.0"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
anyio = "~4.9.0"
black = "~25.1.0"
isort = "~6.0.0"
pre-commit = "~4.2.0"
pylint = "~3.3.0"
pytest = "~8.3.2"
pytest-cov = "~6.1.0"
pytest-mock = "~3.14.0"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
