[project]
name = "acapy-dependencies"
version = "0.1.0"
description = "Dependencies for the DIDx ACA-Py Agents "
authors = [{ name = "ff137", email = "ff137@proton.me" }]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.8"
protobuf = "~=5.29.3"

# ACA-Py Plugins
acapy-wallet-groups-plugin = "==1.3.0.post20250526"
nats-events = { git = "https://github.com/didx-xyz/aries-acapy-plugins", rev = "1b009670f", subdirectory = "nats_events" }
cheqd = { git = "https://github.com/didx-xyz/aries-acapy-plugins", branch = "debug-cheqd", subdirectory = "cheqd" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
