[project]
name = "acapy-dependencies"
version = "0.1.0"
description = "Dependencies for the DIDx ACA-Py Agents "
authors = [{ name = "ff137", email = "ff137@proton.me" }]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.8"
protobuf = "~=6.31.1"

# ACA-Py Plugins
acapy-wallet-groups-plugin = "==1.3.1.post20250702"
nats-events = { git = "https://github.com/didx-xyz/aries-acapy-plugins", tag = "1.3.1-20250702", subdirectory = "nats_events" }
cheqd = { git = "https://github.com/didx-xyz/aries-acapy-plugins", tag = "1.3.1-20250702", subdirectory = "cheqd" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
